--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
         <nav>
             <ul>
                 <li>
-                    <a href="#About-Me">About Me</a>
+                    <a href="#about-me">About Me</a>
                 </li>
                 <li>
-                    <a href="#Projects">Projects</a>
+                    <a href="#projects">Projects</a>
                 </li>
                 <li>
-                    <a href="#Contact-Info">Contact Info</a>
+                    <a href="#contact-info">Contact Info</a>
                 </li>
             </ul>
         </nav>
@@ -29,13 +29,13 @@
 
 <main>
     <section>
-        <div id="About-Me" class="content">
+        <div id="about-me" class="content">
             <h2>About Me</h2>
             <p>
                 Originally from the Bay Area, but I have been located in Washington D.C. since July 2019. I've been working in education for the last 7 years, and am currently employed as a Kindergarten STEM teacher. I'm looking to take my career in a new direction as I work my way through a coding bootcamp via Georgia Tech. I am a highly driven individual who strives to support my team by being collaborative and accountable. Thank you for your consideration, and I look forward to hearing from you. 
             </p>
         </div>
-        <div id="Projects" class="content">
+        <div id="projects" class="content">
             <h2>Projects</h2>
             <div class="icon">Refactor<a href="https://github.com/MBrunoStem/Refactor"><img src="./assets/portfolio-image-2.jpeg" alt="math-equation"></a></div>
             <div class="icon">Jobs 4 More<a href="https://github.com/matthewjflanagan/JOBS-4-MORE"><img src="./assets/portfolio-image-3.jpeg" alt="math-equation"></a></div>
@@ -45,24 +45,24 @@
     </section>
 
     <aside>
-        <div id="Contact-Info" class="Contact">
+        <div id="contact-info" class="contact">
             <h2>Contact Info</h2></div>
             <div>
                 <img src="./assets/portfolio-pic.jpg" alt="portfolio-pic" />
             </div>
-        <div class="Contact">
+        <div class="contact">
             <h3>LinkedIn</h3>
             <p>
                 <a href="https://www.linkedin.com/in/mario-bruno-806792219/">Mario Bruno</a>
             </p>
         </div>
-        <div class="Contact">
+        <div class="contact">
             <h3>Email</h3>
             <p>
                 mbrunostem@gmail.com
             </p>
         </div>
-        <div class="Contact">
+        <div class="contact">
             <h3>GitHub</h3>
             <p>
                 <a href="https://github.com/MBrunoStem">MBrunoStem</a>
@@ -70,12 +70,6 @@
         </div>
     </aside>
 </main>
-
-    <footer>
-        <h6>
-            Thank you for visiting!
-        </h6>
-    </footer>
 </body>
 
 </html>
