--- a/index.html
+++ b/index.html
@@ -24,52 +24,64 @@
             </ul>
         </nav>
     </header>
-  
-<div class="math"></div>
 
-<main>
-    <section>
-        <div id="about-me" class="content">
-            <h2>About Me</h2>
-            <p>
-                Originally from the Bay Area, but I have been located in Washington D.C. since July 2019. I've been working in education for the last 7 years, and am currently employed as a Kindergarten STEM teacher. I'm looking to take my career in a new direction as I work my way through a coding bootcamp via Georgia Tech. I am a highly driven individual who strives to support my team by being collaborative and accountable. Thank you for your consideration, and I look forward to hearing from you. 
-            </p>
-        </div>
-        <div id="projects" class="content">
-            <h2>Projects</h2>
-            <div class="icon">Refactor<a href="https://github.com/MBrunoStem/Refactor"><img src="./assets/portfolio-image-2.jpeg" alt="math-equation"></a></div>
-            <div class="icon">Jobs 4 More<a href="https://github.com/matthewjflanagan/JOBS-4-MORE"><img src="./assets/portfolio-image-3.jpeg" alt="math-equation"></a></div>
-            <div class="icon">Password Generator<a href="https://github.com/MBrunoStem/password-generator"><img src="./assets/portfolio-image-4.jpeg" alt="math-equation"></a></div>
-            <div class="icon">Coming Soon!<img src="./assets/portfolio-image-5.jpeg" alt="math-equation"></div>
-        </div>
-    </section>
+    <div id="banner"></div>
 
-    <aside>
-        <div id="contact-info" class="contact">
-            <h2>Contact Info</h2></div>
+    <main>
+        <section>
+            <div id="about-me" class="content">
+                <h2>About Me</h2>
+                <p>
+                    Originally from the Bay Area, but I have been located in Washington D.C. since July 2019. I've been
+                    working in education for the last 6 years, and am currently employed as a Kindergarten STEM teacher.
+                    I'm looking to take my career in a new direction as I work my way through a coding bootcamp via
+                    Georgia Tech. I am a highly driven individual who strives to support my team by being collaborative
+                    and accountable. Thank you for your consideration, and I look forward to hearing from you.
+                </p>
+            </div>
+            <div id="projects" class="content">
+                <h2>Projects</h2>
+                <div class="icon">JOBS 4 MORE<a href="https://matthewjflanagan.github.io/JOBS-4-MORE/"><img
+                            src="./assets/portfolio-image-2.jpeg" alt="math-equation"></a></div>
+                <div class="icon">JavaScript Quiz<a href="https://mbrunostem.github.io/javascript-quiz/"><img
+                            src="./assets/portfolio-image-3.jpeg" alt="math-equation"></a></div>
+                <div class="icon">Weather Dashboard<a href="https://mbrunostem.github.io/weather-dashboard/"><img
+                            src="./assets/portfolio-image-4.jpeg" alt="math-equation"></a></div>
+                <div class="icon">Password Generator<a href="https://mbrunostem.github.io/password-generator/"><img
+                            src="./assets/portfolio-image-5.jpeg" alt="math-equation"></a></div>
+            </div>
+        </section>
+
+        <aside>
+            <div id="contact-info" class="contact">
+                <h2>Contact Info</h2>
+            </div>
             <div>
                 <img src="./assets/portfolio-pic.jpg" alt="portfolio-pic" />
             </div>
-        <div class="contact">
-            <h3>LinkedIn</h3>
-            <p>
-                <a href="https://www.linkedin.com/in/mario-bruno-806792219/">Mario Bruno</a>
-            </p>
-        </div>
-        <div class="contact">
-            <h3>Email</h3>
-            <p>
-                mbrunostem@gmail.com
-            </p>
-        </div>
-        <div class="contact">
-            <h3>GitHub</h3>
-            <p>
-                <a href="https://github.com/MBrunoStem">MBrunoStem</a>
-            </p>
-        </div>
-    </aside>
-</main>
+            <div class="contact">
+                <h3>LinkedIn</h3>
+                <p>
+                    <a href="https://www.linkedin.com/in/mario-bruno-806792219/">Mario Bruno</a>
+                </p>
+            </div>
+            <div class="contact">
+                <h3>Email</h3>
+                <p>
+                    mbrunostem@gmail.com
+                </p>
+            </div>
+            <div class="contact">
+                <h3>GitHub</h3>
+                <p>
+                    <a href="https://github.com/MBrunoStem">MBrunoStem</a>
+                </p>
+            </div>
+            <div class="contact">
+                <h3><a href="file:///Users/mario/Desktop/Resume.docx.pdf">Résumé</h3>
+            </div>
+        </aside>
+    </main>
 </body>
 
 </html>
