--- a/index.html
+++ b/index.html
@@ -40,14 +40,13 @@
                 </p>
             </div>
             <div id="projects" class="content">
-                <h2>Projects</h2>
                 <div class="icon">JOBS 4 MORE<a href="https://matthewjflanagan.github.io/JOBS-4-MORE/"><img
                             src="./assets/portfolio-image-2.jpeg" alt="math-equation"></a></div>
                 <div class="icon">JavaScript Quiz<a href="https://mbrunostem.github.io/javascript-quiz/"><img
                             src="./assets/portfolio-image-3.jpeg" alt="math-equation"></a></div>
                 <div class="icon">Weather Dashboard<a href="https://mbrunostem.github.io/weather-dashboard/"><img
                             src="./assets/portfolio-image-4.jpeg" alt="math-equation"></a></div>
-                <div class="icon">Password Generator<a href="https://mbrunostem.github.io/password-generator/"><img
+                <div class="icon">Day Planner<a href="https://mbrunostem.github.io/day-planner/"><img
                             src="./assets/portfolio-image-5.jpeg" alt="math-equation"></a></div>
             </div>
         </section>
@@ -78,7 +77,7 @@
                 </p>
             </div>
             <div class="contact">
-                <h3><a href="file:///Users/mario/Desktop/Resume.docx.pdf">Résumé</h3>
+                <h3><a href="./resume.pdf">Résumé</h3>
             </div>
         </aside>
     </main>
